[DOCUMENTATION] updated Swagger Docs
